styles.css
@charset "utf-8";
/* CSS Document */
html,body{
	margin:0;
	padding:0;
	background-color:rgba(255,255,255,1);
	color: black;
	background-color:rgba(255,255,255,1)
}


.wrapper{
	font-size:0; 
	font-family: 'Advent Pro', sans-serif;
	top:0;
	overflow:hidden;
	}
.header{
	width:100%;
	/*height:100px;*/
	top:0;
	/*background-color:white;*/
	display:block;
	font-size:10px;
	background-image:url(headermesh2.jpg);
	background-repeat:no-repeat;
	background-size:100%;
	/*background-color:rgba(0,0,0,0.5)*/
	}
.logo{
	width:3%;
	height:auto;
	float: left;
	padding-left:7%;
	padding-top: 1%;
	}
.navbut{
	display:inline;
	}
.navbut a{			/*header page links*/
	margin:0;
	padding:0;	
	display:inline-block;
	text-decoration:none;
	color:white;
	width:10%;
	}
.navbut a:hover{
	color:red;	
	}
ul {				/*navlist positioning, style*/	
	padding:2.5% 0% 2.5% 45%;
	text-align:center;
	vertical-align:middle;	
	font-family:'Proxima Nova', sans-serif;
	font-size:12px;
	text-transform:uppercase;
	margin:0;
	letter-spacing:3px;
	}
.wrap1{
	width:100%;
	height:900px;
	background-image:url(ph2.png);
	background-size:100%;
	background-repeat:no-repeat;
	display:inline-block;
	margin-top: 0;
	}
.wrap2{
	width:100%;
	height:900px;
	text-align:center;
	background-color:white;
	margin:0;
	vertical-align:top;
	display:inline-block;
	}
.footer{
	width:100%;
	height:200px;
	text-align:center;
	display:inline-block;
	background-color:black;
	display:inline-block;
	}
.s{
	position:relative;
	top:20%;	
	font-size:42px;
	color:white;
	font-weight:100;
	letter-spacing:5px;
	font-family:'Proxima Nova', sans serif;
	text-align:center;
	}
.s2{
	position:relative;
	top:30%;
	font-size:42px;	
	}
.s3{
	position:relative;
	top:40%;
	padding:0 20% 0 20%;
	font-size:30px;
	text-align:left;
	}
.s4{
	position:realtive;
	top:10%;
	font-size:10px
	}
#hs1 a{

	color:red;}

